2014-08-31  Tim Horton  <timothy_horton@apple.com>

        SVGImage::drawPatternForContainer creates a buffer without respecting the destination's acceleration setting
        https://bugs.webkit.org/show_bug.cgi?id=136408
        <rdar://problem/12013317>

        Reviewed by Dan Bernstein.

        No new tests required, just a performance improvement.

        * svg/graphics/SVGImage.cpp:
        (WebCore::SVGImage::drawPatternForContainer):
        Use ImageBuffer::createCompatibleBuffer, which passes the destination's
        acceleration setting through to the ImageBuffer constructor.

        I didn't use GraphicsContext::createCompatibleBuffer because adjusting
        how this function applies the destination's CTM is outside the scope of this patch.

2014-08-30  Joseph Pecoraro  <pecoraro@apple.com>

        Convert string literals to character literals in makeString usage
        https://bugs.webkit.org/show_bug.cgi?id=136394

        Reviewed by Sam Weinig.

        * inspector/InspectorOverlay.cpp:
        (WebCore::InspectorOverlay::evaluateInOverlay):
        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::setOriginalURLForDownloadRequest):
        * loader/MixedContentChecker.cpp:
        (WebCore::MixedContentChecker::logWarning):
        * page/ContentSecurityPolicy.cpp:
        (WebCore::CSPDirectiveList::checkMediaTypeAndReportViolation):
        (WebCore::ContentSecurityPolicy::reportUnsupportedDirective):
        (WebCore::ContentSecurityPolicy::reportInvalidPathCharacter):
        Also reorder some code to ensure single string creation.

2014-08-26  Maciej Stachowiak  <mjs@apple.com>

        Use RetainPtr::autorelease in some places where it seems appropriate
        https://bugs.webkit.org/show_bug.cgi?id=136280

        Reviewed by Darin Adler.

        * platform/mac/URLMac.mm:
        (WebCore::URL::operator NSURL *): Use autorelease() instead of
        CFBridgingRelease(leakRef())
